--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+      "chalk": "^5.3.0",
       "express": "^4.17.1",
       "jshint": "^2.12.0",
       "mysql2": "^2.2.5",
-      "inquirer": "^8.2.4"
+      "inquirer": "^8.2.4",
+      "sequelize": "^6.31.0",
+      "dotenv": "^16.0.3"
     }
   }
   
